Prepare portable sdrtrunk-vce alpha release
Consolidate portable startup and SQLite configuration, finalize the optional module boundary, complete the embedded stats web console, and synchronize grant-backed channel inventory with independent web playback.